--- a/05-Artificial-Neural-Network-And-Improvement/code/day76_mnist_classification.ipynb
+++ b/05-Artificial-Neural-Network-And-Improvement/code/day76_mnist_classification.ipynb
@@ -14,6 +14,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   A  B  C\n",
+      "0  1  2  3\n",
+      "1  4  5  6\n",
+      "2  7  8  9\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame([[1, 2, 3], [4, 5, 6], [7, 8, 9]], columns=['A', 'B', 'C'])\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -665,15 +705,6 @@
    ],
    "source": [
     "model.predict(X_test[0].reshape(1, 28, 28)).argmax(axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "-"
    ]
   }
  ],
