chore: day111 ANN implementation

--- a/08-Practical-Deep-Learning-With-Pytorch/code/day109_pytorch_training_pipeline_nnmodule.ipynb
+++ b/08-Practical-Deep-Learning-With-Pytorch/code/day109_pytorch_training_pipeline_nnmodule.ipynb
@@ -553,7 +553,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learning_rate = 0.01\n",
+    "epochs = 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +574,7 @@
     "        self.bias = torch.rand(1, dtype = torch.float64, requires_grad=True)\n",
     "\n",
     "    def forward(self, X):\n",
-    "        return torch.matmul(X, self.weights) + self.bias\n",
+    "        z =  torch.matmul(X, self.weights) + self.bias\n",
     "        y_pred = torch.sigmoid(z)\n",
     "        return y_pred\n",
     "    \n",
@@ -578,13 +588,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 136,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "learning_rate = 0.01\n",
-    "epochs = 25"
+    "we too can automate this process with NN modules..... which i'll explore later"
    ]
   },
   {
@@ -596,31 +603,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epochs: 0, Loss: 7.4608391575312245\n",
-      "Epochs: 1, Loss: 7.46082546167907\n",
-      "Epochs: 2, Loss: 7.460811986050719\n",
-      "Epochs: 3, Loss: 7.460798722804038\n",
-      "Epochs: 4, Loss: 7.460785664501918\n",
-      "Epochs: 5, Loss: 7.460772804085819\n",
-      "Epochs: 6, Loss: 7.4607601348514025\n",
-      "Epochs: 7, Loss: 7.460747650426053\n",
-      "Epochs: 8, Loss: 7.460735344748142\n",
-      "Epochs: 9, Loss: 7.460723212047851\n",
-      "Epochs: 10, Loss: 7.460711246829414\n",
-      "Epochs: 11, Loss: 7.460699443854682\n",
-      "Epochs: 12, Loss: 7.460687798127856\n",
-      "Epochs: 13, Loss: 7.460676304881331\n",
-      "Epochs: 14, Loss: 7.4606649595625045\n",
-      "Epochs: 15, Loss: 7.460653757821532\n",
-      "Epochs: 16, Loss: 7.460642695499913\n",
-      "Epochs: 17, Loss: 7.460631768619828\n",
-      "Epochs: 18, Loss: 7.460620973374208\n",
-      "Epochs: 19, Loss: 7.460610306117463\n",
-      "Epochs: 20, Loss: 7.460599763356792\n",
-      "Epochs: 21, Loss: 7.46058934174407\n",
-      "Epochs: 22, Loss: 7.460579038068248\n",
-      "Epochs: 23, Loss: 7.460568849248221\n",
-      "Epochs: 24, Loss: 7.46055877232615\n"
+      "Epochs: 0, Loss: 4.196437745289301\n",
+      "Epochs: 1, Loss: 4.185276198857597\n",
+      "Epochs: 2, Loss: 4.174119723125521\n",
+      "Epochs: 3, Loss: 4.162925198810193\n",
+      "Epochs: 4, Loss: 4.151683340424229\n",
+      "Epochs: 5, Loss: 4.140446806322351\n",
+      "Epochs: 6, Loss: 4.129215664034424\n",
+      "Epochs: 7, Loss: 4.11798998191239\n",
+      "Epochs: 8, Loss: 4.106769829168125\n",
+      "Epochs: 9, Loss: 4.095555275851995\n",
+      "Epochs: 10, Loss: 4.084328133897699\n",
+      "Epochs: 11, Loss: 4.072970637893679\n",
+      "Epochs: 12, Loss: 4.061487680145903\n",
+      "Epochs: 13, Loss: 4.050001071198356\n",
+      "Epochs: 14, Loss: 4.038445791808554\n",
+      "Epochs: 15, Loss: 4.026896730355753\n",
+      "Epochs: 16, Loss: 4.0153539666260745\n",
+      "Epochs: 17, Loss: 4.003817581364647\n",
+      "Epochs: 18, Loss: 3.9922876562401908\n",
+      "Epochs: 19, Loss: 3.9807328873700634\n",
+      "Epochs: 20, Loss: 3.969127355528841\n",
+      "Epochs: 21, Loss: 3.957528556926524\n",
+      "Epochs: 22, Loss: 3.945936577594368\n",
+      "Epochs: 23, Loss: 3.934351504533453\n",
+      "Epochs: 24, Loss: 3.9227734257181974\n",
+      "Epochs: 25, Loss: 3.9111420356563915\n",
+      "Epochs: 26, Loss: 3.899282514413269\n",
+      "Epochs: 27, Loss: 3.887430309606363\n",
+      "Epochs: 28, Loss: 3.87555289222991\n",
+      "Epochs: 29, Loss: 3.8635661838218036\n",
+      "Epochs: 30, Loss: 3.8514807262505655\n",
+      "Epochs: 31, Loss: 3.839336768977364\n",
+      "Epochs: 32, Loss: 3.8272007100346843\n",
+      "Epochs: 33, Loss: 3.8150726508596815\n",
+      "Epochs: 34, Loss: 3.8029526939730625\n",
+      "Epochs: 35, Loss: 3.7907618895102533\n",
+      "Epochs: 36, Loss: 3.7784606059295602\n",
+      "Epochs: 37, Loss: 3.766167964153222\n",
+      "Epochs: 38, Loss: 3.753884075295832\n",
+      "Epochs: 39, Loss: 3.7416090516584766\n",
+      "Epochs: 40, Loss: 3.7293430067080227\n",
+      "Epochs: 41, Loss: 3.717086055079526\n",
+      "Epochs: 42, Loss: 3.7048383126045836\n",
+      "Epochs: 43, Loss: 3.692599896276897\n",
+      "Epochs: 44, Loss: 3.680370924281271\n",
+      "Epochs: 45, Loss: 3.668061853434811\n",
+      "Epochs: 46, Loss: 3.6556318546175834\n",
+      "Epochs: 47, Loss: 3.64308270521765\n",
+      "Epochs: 48, Loss: 3.6305436452752944\n",
+      "Epochs: 49, Loss: 3.6179944615382427\n"
      ]
     }
    ],
@@ -649,52 +681,50 @@
     "        model.weights.grad.zero_()\n",
     "        model.bias.grad.zero_()\n",
     "\n",
-    "    print(f'Epochs: {epochs}, Loss: {loss.item()}')\n",
-    "\n",
-    "    # 6. Evaluate: After training, evaluate the model's performance on a test set."
+    "    print(f'Epochs: {epochs}, Loss: {loss.item()}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.2196],\n",
-       "        [0.1064],\n",
-       "        [0.1492],\n",
-       "        [0.2979],\n",
-       "        [0.3652],\n",
-       "        [0.2365],\n",
-       "        [0.2907],\n",
-       "        [0.2251],\n",
-       "        [0.5264],\n",
-       "        [0.4324],\n",
-       "        [0.9133],\n",
-       "        [0.2826],\n",
-       "        [0.5236],\n",
-       "        [0.8548],\n",
-       "        [0.5531],\n",
-       "        [0.4891],\n",
-       "        [0.9212],\n",
-       "        [0.5164],\n",
-       "        [0.4267],\n",
-       "        [0.0010],\n",
-       "        [0.7705],\n",
-       "        [0.9036],\n",
-       "        [0.7122],\n",
-       "        [0.5279],\n",
-       "        [0.4456],\n",
-       "        [0.4459],\n",
-       "        [0.3179],\n",
-       "        [0.1189],\n",
-       "        [0.2962],\n",
-       "        [0.3018]], dtype=torch.float64, requires_grad=True)"
+       "tensor([[0.8829],\n",
+       "        [0.1840],\n",
+       "        [0.2392],\n",
+       "        [0.5202],\n",
+       "        [0.7135],\n",
+       "        [0.7206],\n",
+       "        [0.0992],\n",
+       "        [0.0794],\n",
+       "        [0.6356],\n",
+       "        [0.2105],\n",
+       "        [0.9157],\n",
+       "        [0.5534],\n",
+       "        [0.8239],\n",
+       "        [0.4494],\n",
+       "        [0.6590],\n",
+       "        [0.6713],\n",
+       "        [0.7475],\n",
+       "        [0.8401],\n",
+       "        [0.0490],\n",
+       "        [0.8577],\n",
+       "        [0.1291],\n",
+       "        [0.4732],\n",
+       "        [0.4925],\n",
+       "        [0.8487],\n",
+       "        [0.1002],\n",
+       "        [0.4606],\n",
+       "        [0.0696],\n",
+       "        [0.3130],\n",
+       "        [0.8219],\n",
+       "        [0.7657]], dtype=torch.float64, requires_grad=True)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,16 +735,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.6667], dtype=torch.float64, requires_grad=True)"
+       "tensor([0.0520], dtype=torch.float64, requires_grad=True)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,19 +755,183 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.5236995816230774\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0,\n",
+       "        0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1,\n",
+       "        0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1],\n",
+       "       dtype=torch.int32)"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Evaluation\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    y_test_pred = model.forward(x_test_tensor)\n",
+    "    y_test_pred = (y_test_pred > 0.5).float() \n",
+    "    accuracy = (y_test_pred == y_test_tensor).float().mean()\n",
+    "    print(f'Accuracy: {accuracy.item()}')\n",
+    "\n",
+    "y_test_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.]])"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "    # There are following steps with pipeline:\n",
-    "    # 1. Forward pass: Compute the model output (predictions) using the current weights and bias.\n",
-    "    # 2. Compute the loss: Calculate the loss using the predictions and the true labels.\n",
-    "    # 3. Backward pass: Compute the gradients of the loss with respect to the weights and bias.\n",
-    "    # 4. Update weights and bias: Adjust the weights and bias using the gradients and the learning rate.\n",
-    "    # 5. Repeat: Repeat steps 1-4 for a specified number of epochs or until convergence.\n",
-    "    # 6. Evaluate: After training, evaluate the model's performance on a test set.'\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
