--- a/10-Projects-Based-ML-DL/01-Image-Classification(guess_the_footballer_by_eyes)/scraping.ipynb
+++ b/10-Projects-Based-ML-DL/01-Image-Classification(guess_the_footballer_by_eyes)/scraping.ipynb
@@ -5499,6 +5499,62 @@
     "val_loader = DataLoader(val_dataset, batch_size=32, shuffle=False, num_workers=4)\n",
     "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False, num_workers=4)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9aea4288",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting torchcam\n",
+      "  Downloading torchcam-0.4.0-py3-none-any.whl.metadata (31 kB)\n",
+      "Requirement already satisfied: torch<3.0.0,>=2.0.0 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torchcam) (2.5.1+cu121)\n",
+      "Requirement already satisfied: numpy<2.0.0,>=1.17.2 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torchcam) (1.26.4)\n",
+      "Requirement already satisfied: Pillow!=9.2.0,>=8.4.0 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torchcam) (11.0.0)\n",
+      "Requirement already satisfied: matplotlib<4.0.0,>=3.7.0 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torchcam) (3.10.3)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from matplotlib<4.0.0,>=3.7.0->torchcam) (1.3.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from matplotlib<4.0.0,>=3.7.0->torchcam) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from matplotlib<4.0.0,>=3.7.0->torchcam) (4.58.4)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from matplotlib<4.0.0,>=3.7.0->torchcam) (1.4.8)\n",
+      "Requirement already satisfied: packaging>=20.0 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from matplotlib<4.0.0,>=3.7.0->torchcam) (25.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from matplotlib<4.0.0,>=3.7.0->torchcam) (3.2.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from matplotlib<4.0.0,>=3.7.0->torchcam) (2.9.0.post0)\n",
+      "Requirement already satisfied: filelock in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torch<3.0.0,>=2.0.0->torchcam) (3.13.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torch<3.0.0,>=2.0.0->torchcam) (4.12.2)\n",
+      "Requirement already satisfied: networkx in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torch<3.0.0,>=2.0.0->torchcam) (3.3)\n",
+      "Requirement already satisfied: jinja2 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torch<3.0.0,>=2.0.0->torchcam) (3.1.4)\n",
+      "Requirement already satisfied: fsspec in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torch<3.0.0,>=2.0.0->torchcam) (2024.6.1)\n",
+      "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.1.105 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torch<3.0.0,>=2.0.0->torchcam) (12.1.105)\n",
+      "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.1.105 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torch<3.0.0,>=2.0.0->torchcam) (12.1.105)\n",
+      "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.1.105 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torch<3.0.0,>=2.0.0->torchcam) (12.1.105)\n",
+      "Requirement already satisfied: nvidia-cudnn-cu12==9.1.0.70 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torch<3.0.0,>=2.0.0->torchcam) (9.1.0.70)\n",
+      "Requirement already satisfied: nvidia-cublas-cu12==12.1.3.1 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torch<3.0.0,>=2.0.0->torchcam) (12.1.3.1)\n",
+      "Requirement already satisfied: nvidia-cufft-cu12==11.0.2.54 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torch<3.0.0,>=2.0.0->torchcam) (11.0.2.54)\n",
+      "Requirement already satisfied: nvidia-curand-cu12==10.3.2.106 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torch<3.0.0,>=2.0.0->torchcam) (10.3.2.106)\n",
+      "Requirement already satisfied: nvidia-cusolver-cu12==11.4.5.107 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torch<3.0.0,>=2.0.0->torchcam) (11.4.5.107)\n",
+      "Requirement already satisfied: nvidia-cusparse-cu12==12.1.0.106 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torch<3.0.0,>=2.0.0->torchcam) (12.1.0.106)\n",
+      "Requirement already satisfied: nvidia-nccl-cu12==2.21.5 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torch<3.0.0,>=2.0.0->torchcam) (2.21.5)\n",
+      "Requirement already satisfied: nvidia-nvtx-cu12==12.1.105 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torch<3.0.0,>=2.0.0->torchcam) (12.1.105)\n",
+      "Requirement already satisfied: triton==3.1.0 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torch<3.0.0,>=2.0.0->torchcam) (3.1.0)\n",
+      "Requirement already satisfied: sympy==1.13.1 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from torch<3.0.0,>=2.0.0->torchcam) (1.13.1)\n",
+      "Requirement already satisfied: nvidia-nvjitlink-cu12 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from nvidia-cusolver-cu12==11.4.5.107->torch<3.0.0,>=2.0.0->torchcam) (12.1.105)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from sympy==1.13.1->torch<3.0.0,>=2.0.0->torchcam) (1.3.0)\n",
+      "Requirement already satisfied: six>=1.5 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib<4.0.0,>=3.7.0->torchcam) (1.17.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /mnt/ExtraData/Github/365DaysOfData/venv/lib/python3.10/site-packages (from jinja2->torch<3.0.0,>=2.0.0->torchcam) (2.1.5)\n",
+      "Downloading torchcam-0.4.0-py3-none-any.whl (46 kB)\n",
+      "Installing collected packages: torchcam\n",
+      "Successfully installed torchcam-0.4.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install torchcam"
+   ]
   }
  ],
  "metadata": {
