--- a/11-Foundations-Of-LLMS/GPT-From-Scratch/let-s-build-gpt-from-scratch-in-code-spelled-out.ipynb
+++ b/11-Foundations-Of-LLMS/GPT-From-Scratch/let-s-build-gpt-from-scratch-in-code-spelled-out.ipynb
@@ -2917,7 +2917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-06-12T15:53:32.179785Z",
@@ -3159,20 +3159,20 @@
     "    loss.backward()\n",
     "    optimizer.step()\n",
     "\n",
-    "# generate from the model\n",
+    "# generate from the model \n",
     "context = torch.zeros((1, 1), dtype=torch.long, device=device)\n",
     "print(decode(m.generate(context, max_new_tokens=5000)[0].tolist()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_loss = [4.3293, 2.4767, 2.4008, 2.2327, 2.0836, 1.9705, 1.8641, 1.7736, 1.7165, 1.6546, 1.6098, 1.5782, 1.5421, 1.5148, 1.4894, 1.4668]\n",
-    "val_loss = [4.3350, 2.4911, 2.4196, 2.2623, 2.1390, 2.0530, 1.9817, 1.9090, 1.8648, 1.8098, 1.7797, 1.7548, 1.7266, 1.7011, 1.6886, 1.6605]\n",
-    "steps = [0, 200, 400, 600, 800, 1000, 1200, 1400, 1600, 1800, 2000, 2200, 2400, 2600, 2800, 2999]"
+    "train_loss = [4.2849, 2.0119, 1.5956, 1.4398, 1.3404, 1.2798, 1.2252, 1.1840, 1.1461, 1.1105, 1.0777]\n",
+    "val_loss = [4.2823, 2.0984, 1.7743, 1.6369, 1.5664, 1.5329, 1.5036, 1.4878, 1.4820, 1.4804, 1.4856]\n",
+    "steps = [0, 500, 1000, 1500, 2000, 2500, 3000, 3500, 4000, 4500, 4999]"
    ]
   },
   {
