--- a/10-Projects-Based-ML-DL/03-Image-Captioning/image-captioning.ipynb
+++ b/10-Projects-Based-ML-DL/03-Image-Captioning/image-captioning.ipynb
@@ -1666,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "68e32d1c",
    "metadata": {},
    "outputs": [
@@ -1736,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "b224a07c",
    "metadata": {},
    "outputs": [
@@ -1797,7 +1797,7 @@
        "1  <start> a girl going into a wooden building . ...  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1808,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "f1f44bb1",
    "metadata": {},
    "outputs": [],
@@ -1845,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "9640fe32",
    "metadata": {},
    "outputs": [
@@ -1915,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "711a2969",
    "metadata": {},
    "outputs": [
@@ -1925,7 +1925,7 @@
        "5.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1936,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "id": "8d04035d",
    "metadata": {},
    "outputs": [
@@ -1970,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "id": "5b0bc09b",
    "metadata": {},
    "outputs": [
@@ -1980,7 +1980,7 @@
        "40455"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1991,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "id": "6cb7d26e",
    "metadata": {},
    "outputs": [
@@ -2001,7 +2001,7 @@
        "8091"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2012,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "id": "8c861103",
    "metadata": {},
    "outputs": [
@@ -2022,7 +2022,7 @@
        "(32360, 8095)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2033,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "id": "d486b954",
    "metadata": {},
    "outputs": [
@@ -2064,7 +2064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 30,
    "id": "4b6e2120",
    "metadata": {},
    "outputs": [
@@ -2154,7 +2154,7 @@
        " AdaptiveAvgPool2d(output_size=(1, 1))]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2165,7 +2165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 31,
    "id": "c45d85f6",
    "metadata": {},
    "outputs": [
@@ -2257,7 +2257,7 @@
        ")"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2279,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 32,
    "id": "171d9a43",
    "metadata": {},
    "outputs": [
@@ -2289,7 +2289,7 @@
        "'d:\\\\Github\\\\365DaysOfData\\\\10-Projects-Based-ML-DL\\\\03-Image-Captioning\\\\data'"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2300,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 33,
    "id": "276f9585",
    "metadata": {},
    "outputs": [
@@ -2333,7 +2333,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\samir\\AppData\\Local\\Temp\\ipykernel_28508\\2883263334.py:36: RuntimeWarning: invalid value encountered in divide\n",
+      "C:\\Users\\samir\\AppData\\Local\\Temp\\ipykernel_26004\\2883263334.py:36: RuntimeWarning: invalid value encountered in divide\n",
       "  feature_map = (feature_map - feature_map.min()) / (feature_map.max() - feature_map.min())\n"
      ]
     },
@@ -2560,7 +2560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 34,
    "id": "110f31bd",
    "metadata": {},
    "outputs": [
@@ -2591,7 +2591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 35,
    "id": "709ff6fb",
    "metadata": {},
    "outputs": [
@@ -2621,7 +2621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 36,
    "id": "daf04b62",
    "metadata": {},
    "outputs": [
@@ -2634,7 +2634,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2645,7 +2645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 37,
    "id": "6757de56",
    "metadata": {},
    "outputs": [
@@ -2663,7 +2663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 38,
    "id": "1bd4451a",
    "metadata": {},
    "outputs": [
@@ -2800,7 +2800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 39,
    "id": "adfee0a5",
    "metadata": {},
    "outputs": [
@@ -2820,7 +2820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 40,
    "id": "f0a0d10c",
    "metadata": {},
    "outputs": [
@@ -2848,7 +2848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 41,
    "id": "51bfb748",
    "metadata": {},
    "outputs": [
@@ -2881,7 +2881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 42,
    "id": "929f2bc3",
    "metadata": {},
    "outputs": [
@@ -2908,7 +2908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 43,
    "id": "9b3ad843",
    "metadata": {},
    "outputs": [
@@ -2939,7 +2939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 44,
    "id": "39446c28",
    "metadata": {},
    "outputs": [
@@ -2961,7 +2961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 45,
    "id": "251b355c",
    "metadata": {},
    "outputs": [
@@ -2986,7 +2986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 46,
    "id": "77b24595",
    "metadata": {},
    "outputs": [
@@ -2996,7 +2996,7 @@
        "'1000268201_693b08cb0e.jpg'"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3007,7 +3007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "447fcdac",
    "metadata": {},
    "outputs": [
@@ -3033,13 +3033,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "id": "0070d27c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lets understand this first how to build it:\n",
-    "\n",
+    "# Lets understand this first how to build the CustomDataset class\n",
     "\n",
     "# what happens in __getitem__ ?\n",
     "# get image from dataframe , look up to pre_extracted features, tokenize\n",
@@ -3103,7 +3102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 49,
    "id": "1aeb8594",
    "metadata": {},
    "outputs": [
@@ -3206,7 +3205,7 @@
        " 'image_name': '1000268201_693b08cb0e.jpg'}"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3217,7 +3216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 50,
    "id": "fb30de4e",
    "metadata": {},
    "outputs": [
@@ -3253,7 +3252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 51,
    "id": "1d1e55bf",
    "metadata": {},
    "outputs": [],
@@ -3278,13 +3277,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a0feb02d",
+   "execution_count": 53,
+   "id": "50c12a79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch = next(iter(train_dataloader))\n",
-    "print(f\"Batch size: {len(batch['image_feature'])}\")"
+    "import pickle\n",
+    "\n",
+    "save_dict = {\n",
+    "    'vocab': vocab,\n",
+    "    'word2idx': word2idx,\n",
+    "    'idx2word': idx2word,\n",
+    "    'max_length': 20\n",
+    "}\n",
+    "\n",
+    "with open('vocabulary.pkl', 'wb') as f:\n",
+    "    pickle.dump(save_dict, f)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8484dd75",
+   "metadata": {},
+   "source": [
+    "#### Now DataLoaders ready for Trahsformer Training !, the next step is, building transformer, Define loss function and optimizer, then train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "565bb12e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# transformer model of image captioning should consist of:\n",
+    "# 1. Encoder: to process image features (which we already processed with ResNet)\n",
+    "# 2. Decoder: to generate captions based on encoded features (takes image features[from Resnet]\n",
+    "#               and input caption sequence[shifted by one timestamp]) and output the next word..\n"
    ]
   }
  ],
