chore: day157 runnables

--- a/12-RAG-And-Agents-With-Langchain/code/day156_langchain_dummy_llm.ipynb
+++ b/12-RAG-And-Agents-With-Langchain/code/day156_langchain_dummy_llm.ipynb
@@ -1,51 +1,42 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "from abc import ABC, abstractmethod"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "X17XNOaKGr45"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from abc import ABC, abstractmethod"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "IFz_UygPG14c"
+      },
+      "outputs": [],
       "source": [
         "class Runnable(ABC):\n",
         "\n",
         "  @abstractmethod\n",
         "  def invoke(input_data):\n",
         "    pass"
-      ],
-      "metadata": {
-        "id": "IFz_UygPG14c"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "WPyqRUB0G2Fl"
+      },
+      "outputs": [],
       "source": [
         "import random\n",
         "\n",
-        "class NakliLLM(Runnable):\n",
+        "class FakeLLM(Runnable):\n",
         "\n",
         "  def __init__(self):\n",
         "    print('LLM created')\n",
@@ -69,17 +60,17 @@
         "    ]\n",
         "\n",
         "    return {'response': random.choice(response_list)}"
-      ],
-      "metadata": {
-        "id": "WPyqRUB0G2Fl"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "KDiHeGomG5ek"
+      },
+      "outputs": [],
       "source": [
-        "class NakliPromptTemplate(Runnable):\n",
+        "class FakePromptTemplate(Runnable):\n",
         "\n",
         "  def __init__(self, template, input_variables):\n",
         "    self.template = template\n",
@@ -90,32 +81,32 @@
         "\n",
         "  def format(self, input_dict):\n",
         "    return self.template.format(**input_dict)"
-      ],
-      "metadata": {
-        "id": "KDiHeGomG5ek"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aN4aoIOXMn4z"
+      },
+      "outputs": [],
       "source": [
-        "class NakliStrOutputParser(Runnable):\n",
+        "class FakeStrOutputParser(Runnable):\n",
         "\n",
         "  def __init__(self):\n",
         "    pass\n",
         "\n",
         "  def invoke(self, input_data):\n",
         "    return input_data['response']"
-      ],
-      "metadata": {
-        "id": "aN4aoIOXMn4z"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "IMiDtySDIIzj"
+      },
+      "outputs": [],
       "source": [
         "class RunnableConnector(Runnable):\n",
         "\n",
@@ -128,32 +119,25 @@
         "      input_data = runnable.invoke(input_data)\n",
         "\n",
         "    return input_data"
-      ],
-      "metadata": {
-        "id": "IMiDtySDIIzj"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "template = NakliPromptTemplate(\n",
-        "    template='Write a {length} poem about {topic}',\n",
-        "    input_variables=['length', 'topic']\n",
-        ")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Y_c_Lk6fMJ8s"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "template = FakePromptTemplate(\n",
+        "    template='Write a {length} poem about {topic}',\n",
+        "    input_variables=['length', 'topic']\n",
+        ")"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "llm = NakliLLM()"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -161,44 +145,41 @@
         "id": "--x-JA5_MPgg",
         "outputId": "a4acdfc2-67c4-4bd1-b349-8f1e10ee503b"
       },
+      "outputs": [],
+      "source": [
+        "llm = FakeLLM()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "LLM created\n"
-          ]
-        }
+      "metadata": {
+        "id": "3YC3jTYtM3Pr"
+      },
+      "outputs": [],
+      "source": [
+        "parser = FakeStrOutputParser()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "parser = NakliStrOutputParser()"
-      ],
-      "metadata": {
-        "id": "3YC3jTYtM3Pr"
-      },
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "chain = RunnableConnector([template, llm, parser])"
-      ],
       "metadata": {
         "id": "vgp10rvlLrOt"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "chain = RunnableConnector([template, llm, parser])"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "chain.invoke({'length':'long', 'topic':'india'})"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -207,56 +188,42 @@
         "id": "Vpbx5zxfMYtn",
         "outputId": "758d7517-fcaf-4b88-8b38-29ea96774f06"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'Delhi is the capital of India'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 21
-        }
+      "outputs": [],
+      "source": [
+        "chain.invoke({'length':'long', 'topic':'india'})"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "template1 = NakliPromptTemplate(\n",
-        "    template='Write a joke about {topic}',\n",
-        "    input_variables=['topic']\n",
-        ")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "MZ9QqMQhOGIH"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "template1 = FakePromptTemplate(\n",
+        "    template='Write a joke about {topic}',\n",
+        "    input_variables=['topic']\n",
+        ")"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "template2 = NakliPromptTemplate(\n",
-        "    template='Explain the following joke {response}',\n",
-        "    input_variables=['response']\n",
-        ")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "-GPhO_fxPiSp"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "template2 = FakePromptTemplate(\n",
+        "    template='Explain the following joke {response}',\n",
+        "    input_variables=['response']\n",
+        ")"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "llm = NakliLLM()"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -264,99 +231,93 @@
         "id": "-tl05IwNPsmc",
         "outputId": "db24047e-0bd9-442b-bb49-9f6c428f69a0"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "LLM created\n"
-          ]
-        }
+      "outputs": [],
+      "source": [
+        "llm = FakeLLM()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "parser = NakliStrOutputParser()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "VQEM8GzBPvTT"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
+      "outputs": [],
       "source": [
-        "chain1 = RunnableConnector([template1, llm])"
-      ],
-      "metadata": {
-        "id": "l4XLvuL0PxPz"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "chain2 = RunnableConnector([template2, llm, parser])"
-      ],
-      "metadata": {
-        "id": "mnGtEGWMP6GQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "final_chain = RunnableConnector([chain1, chain2])"
-      ],
-      "metadata": {
-        "id": "j4-MXTQZQIXF"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "final_chain.invoke({'topic':'cricket'})"
-      ],
-      "metadata": {
-        "id": "lAS8bw7cQP2h",
-        "outputId": "60fa1d9f-9bd8-494b-cf4c-713a07bc3121",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'Delhi is the capital of India'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 40
-        }
+        "parser = FakeStrOutputParser()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
+      "metadata": {
+        "id": "l4XLvuL0PxPz"
+      },
+      "outputs": [],
+      "source": [
+        "chain1 = RunnableConnector([template1, llm])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "mnGtEGWMP6GQ"
+      },
+      "outputs": [],
+      "source": [
+        "chain2 = RunnableConnector([template2, llm, parser])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "j4-MXTQZQIXF"
+      },
+      "outputs": [],
+      "source": [
+        "final_chain = RunnableConnector([chain1, chain2])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "lAS8bw7cQP2h",
+        "outputId": "60fa1d9f-9bd8-494b-cf4c-713a07bc3121"
+      },
+      "outputs": [],
+      "source": [
+        "final_chain.invoke({'topic':'football'})"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "36djpb9IQT2e"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
